# dapp-boilerplate

./: .gitattributes  .gitignore  .prettierrc  CONTRIBUTING.md  README.md  SECURITY.md  cspell.json  package.json
.agents/skills/: README.md
.agents/skills/caveman/: SKILL.md
.cursor/rules/: caveman.mdc  deployment-and-devops.mdc  frontend-development.mdc  package-management.mdc  project-structure.mdc  solidity-development.mdc  testing-strategy.mdc  web3-integration.mdc
.cursor/skills/dapp-deployment-devops/: SKILL.md
.cursor/skills/dapp-testing/: SKILL.md
.githooks/: pre-commit  pre-push
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/actions/setup/: action.yml
.github/workflows/: ci-backend-solidity.yml  ci-backend.yml  ci-frontend.yml  ci-tests.yml
.github/workflows/ci/: ci-backend.yml
backend/: .env.example  .env.test  .gitignore  README.md  bunfig.toml  foundry.toml  hardhat.config.ts  package.json  pnpm-lock.yaml  pyproject.toml  slither.config.json  solhint.config.cjs  solhint.config.js  tsconfig.json
backend/contracts/: Ballot.sol
backend/doc/: index.md
backend/ignition/modules/: Ballot.ts
backend/test/foundry/: Ballot.t.sol  BallotInvariant.t.sol
backend/test/hardhat/: Ballot.test.ts
frontend/: .env.dev  .env.example  .env.test  .gitignore  README.md  eslint.config.mjs  next.config.mjs  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tailwind.config.ts  tsconfig.json
frontend/e2e/: ballot-flows.spec.ts  global-setup-ballot.ts  global-teardown-ballot.ts  routes.spec.ts
(+63 files in other folders)
