[tool.poetry]
name = "dapp-backend-tools"
version = "0.0.0"
description = "Python tooling (Slither) for the Solidity backend."
package-mode = false

[tool.poetry.dependencies]
# crytic-compile (Slither) excludes Python 3.12.0 only
python = ">=3.11,<3.12.0 || >3.12.0,<4.0"
slither-analyzer = ">=0.11.5,<0.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
